--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,11 @@
 theme: jekyll-theme-minimal
 name: Gavin Chin
-Description: Learning by breaking and failing
+description: Learning by breaking and failing
 avatar: https://avatars1.githubusercontent.com/u/1640786?s=400&u=8a4fb12c2808a08ff86315aa83f7a4f5535d2f04&v=4
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - CNAME
