--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,18 @@
 
 name: Gavin Chin
-description: Learning by breaking and failing
+title: Learning by breaking and failing
 avatar: https://avatars1.githubusercontent.com/u/1640786?s=400&u=8a4fb12c2808a08ff86315aa83f7a4f5535d2f04&v=4
+
+baseurl: /
 
 permalink: /:title
 
+page_excerpts: true
+
 theme: jekyll-theme-primer
+
+github:
+  repo: https://github.com/slowmonkey
 
 exclude:
   - Gemfile
