Adding RSS Feed to the blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 
 name: Gavin Chin
+author: Gavin Chin
 title: Learning by breaking and failing
 avatar: https://avatars1.githubusercontent.com/u/1640786?s=400&u=8a4fb12c2808a08ff86315aa83f7a4f5535d2f04&v=4
 
@@ -10,6 +11,9 @@ permalink: /:title
 page_excerpts: true
 
 google_analytics: G-3C8R7V7DF2
+
+plugins:
+  - jekyll-feed
 
 github:
   repo: https://github.com/slowmonkey
