Adding cheatsheet  collection to jekyll config

--- a/_config.yml
+++ b/_config.yml
@@ -32,3 +32,8 @@ collections:
     output: true
     permalink: /:collection/:name/
     layout: "recipe"
+
+  cheatsheets:
+    output: true
+    permalink: /:collection/:name/
+    layout: "cheatsheet"
